--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.Dict"
         tools:targetApi="31">
         <activity
+            android:name=".WordDetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".common.BaseActivity"
             android:exported="false" />
         <activity
