--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.dict"
+        applicationId "com.hui.dict"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -35,6 +35,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'org.xutils:xutils:3.7.6'
     implementation project(path: ':PullToRefresh')
+    implementation project(path: ':ocr_ui')
+    implementation fileTree(dir: 'libs/', include: ['*.aar', '*.jar'], exclude: [])
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
