--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.dict">
+    package="com.hui.dict">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:name=".common.MyApplication"
+        android:name="com.hui.dict.common.MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -15,24 +18,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Dict"
+        tools:replace="android:theme"
         tools:targetApi="31">
         <activity
-            android:name=".WordDetailActivity"
+            android:name="com.hui.dict.WordDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".common.BaseActivity"
+            android:name="com.hui.dict.common.BaseActivity"
             android:exported="false" />
         <activity
-            android:name=".BushouSearchActivity"
+            android:name="com.hui.dict.BushouSearchActivity"
             android:exported="false" />
         <activity
-            android:name=".PinyinSearchActivity"
+            android:name="com.hui.dict.PinyinSearchActivity"
             android:exported="false" />
         <activity
-            android:name=".common.BaseSearchActivity"
+            android:name="com.hui.dict.common.BaseSearchActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.hui.dict.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
