--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:name="com.hui.dict.common.MyApplication"
+        android:name=".common.MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -21,22 +21,25 @@
         tools:replace="android:theme"
         tools:targetApi="31">
         <activity
-            android:name="com.hui.dict.WordDetailActivity"
+            android:name=".OcrWordActivity"
             android:exported="false" />
         <activity
-            android:name="com.hui.dict.common.BaseActivity"
+            android:name=".WordDetailActivity"
             android:exported="false" />
         <activity
-            android:name="com.hui.dict.BushouSearchActivity"
+            android:name=".common.BaseActivity"
             android:exported="false" />
         <activity
-            android:name="com.hui.dict.PinyinSearchActivity"
+            android:name=".BushouSearchActivity"
             android:exported="false" />
         <activity
-            android:name="com.hui.dict.common.BaseSearchActivity"
+            android:name=".PinyinSearchActivity"
             android:exported="false" />
         <activity
-            android:name="com.hui.dict.MainActivity"
+            android:name=".common.BaseSearchActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
