--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,12 @@
         tools:replace="android:theme"
         tools:targetApi="31">
         <activity
+            android:name=".CollectionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SettingActivity"
+            android:exported="false" />
+        <activity
             android:name=".ChengyuDetailActivity"
             android:exported="false" />
         <activity
